--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RAPID_API_KEY='339798abd2msheeb47250d9e5851p13e9e3jsn8fb6736e1260'
+REACT_APP_RAPID_API_KEY=KJwZZIJSFimshuivMSVGaiYzkRomp15f2vKjsnK4bKzuUzVLzA
